@@ -882,6 +882,35 @@
 		</div>
 		</div></td>
 	</tr>
+	<tr data-order="unrefInRule" id="_unrefInRule">
+
+		<td class="attributes"><code>
+			 public 
+			
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_unrefInRule">#</a>
+		<code><b>unrefInRule</b>( <span>mixed <var>$object</var></span> )</code>
+
+		<div class="description short">
+			
+		</div>
+
+		<div class="description detailed hidden">
+			
+
+
+
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
 	</table>
 
 
@@ -901,7 +930,7 @@
 			<a href="class-ReferencableObject.html#_refInRule"><b>refInRule()</b></a>, 
 			<a href="class-ReferencableObject.html#_replaceMeGlobally"><b>replaceMeGlobally()</b></a>, 
 			<a href="class-ReferencableObject.html#_setRefName"><b>setRefName()</b></a>, 
-			<a href="class-ReferencableObject.html#_unrefInRule"><b>unrefInRule()</b></a>
+			<a href="class-ReferencableObject.html#_unrefInRule"><b>super_unrefInRule()</b></a>(as super_unrefInRule())
 		</code></td>
 	</tr>
 	</table>
