@@ -537,13 +537,15 @@ $vsys1-&gt;display_statistics();</p>
 
 		<div class="description short">
 			
-<p>send current config to the firewall and save under name $config_name</p>
+<p>send current config to the firewall and save under name $config_name TODO :
+replace by PANAPI Connector</p>
 
 		</div>
 
 		<div class="description detailed hidden">
 			
-<p>send current config to the firewall and save under name $config_name</p>
+<p>send current config to the firewall and save under name $config_name TODO :
+replace by PANAPI Connector</p>
 
 
 
