@@ -806,6 +806,46 @@
 		</div>
 		</div></td>
 	</tr>
+	<tr data-order="sendCmdRequest" id="_sendCmdRequest">
+
+		<td class="attributes"><code>
+			 public 
+			DomDocument|string[]
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_sendCmdRequest">#</a>
+		<code><b>sendCmdRequest</b>( <span>mixed <var>$cmd</var></span>, <span>mixed <var>$checkResultTag</var> = <span class="php-keyword1">true</span></span> )</code>
+
+		<div class="description short">
+			
+		</div>
+
+		<div class="description detailed hidden">
+			
+
+
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$cmd</var></dt>
+					<dd><code>mixed</code><br>$cmd</dd>
+					<dt><var>$checkResultTag</var></dt>
+					<dd></dd>
+				</dl></div>
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code>DomDocument|string[]</code><br />
+				</div>
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
 	<tr data-order="getJobResult" id="_getJobResult">
 
 		<td class="attributes"><code>
@@ -857,6 +897,52 @@
 
 
 
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="uploadConfiguration" id="_uploadConfiguration">
+
+		<td class="attributes"><code>
+			 public 
+			<code><a href="class-DOMNode.html">DOMNode</a></code>
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_uploadConfiguration">#</a>
+		<code><b>uploadConfiguration</b>( <span><code><a href="class-DOMNode.html">DOMNode</a></code> <var>$configDomXml</var></span>, <span>string <var>$configName</var> = <span class="php-quote">'stage0.xml'</span></span>, <span>mixed <var>$verbose</var> = <span class="php-keyword1">true</span> </span> )</code>
+
+		<div class="description short">
+			
+<p>send a config to the firewall and save under name $config_name</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>send a config to the firewall and save under name $config_name</p>
+
+
+
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$configDomXml</var></dt>
+					<dd><code><code><a href="class-DOMNode.html">DOMNode</a></code></code><br>$configDomXml</dd>
+					<dt><var>$configName</var></dt>
+					<dd><code>string</code><br>$configName</dd>
+					<dt><var>$verbose</var></dt>
+					<dd></dd>
+				</dl></div>
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code><code><a href="class-DOMNode.html">DOMNode</a></code></code><br />
+				</div>
 
 
 
