@@ -586,6 +586,7 @@
 	<caption>Methods inherited from <a href="class-ObjRuleContainer.html#methods">ObjRuleContainer</a></caption>
 	<tr>
 		<td><code>
+			<a href="class-ObjRuleContainer.html#___destruct"><b>__destruct()</b></a>, 
 			<a href="class-ObjRuleContainer.html#_count"><b>count()</b></a>, 
 			<a href="class-ObjRuleContainer.html#_display"><b>display()</b></a>, 
 			<a href="class-ObjRuleContainer.html#_equals"><b>equals()</b></a>, 
