@@ -20,6 +20,7 @@
 set_time_limit ( 0 );
 ini_set("memory_limit","14512M");
 error_reporting(E_ALL);
+gc_enable();
 
 if (!extension_loaded('curl')) {
     if (strtoupper(substr(PHP_OS, 0, 3)) === 'WIN') {
